# simple-jira-mcp

./: .gitignore  .markdownlint.json  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  check.sh  pyproject.toml  requirements-dev.txt
src/: __init__.py  __main__.py  config.py  server.py
src/jira/: __init__.py  adf.py  attachment.py  base.py  client.py  create.py  issue.py  search.py
src/tools/: attachment.py  configs.py  create.py  issue.py  search.py
src/utils/: errors.py  validation.py
tests/: __init__.py  test_adf.py  test_config.py  test_validation.py
tests/jira/: __init__.py  conftest.py  test_attachment.py  test_base.py  test_create.py  test_issue.py  test_search.py
tests/test_tools/: test_attachment.py  test_configs.py  test_create.py  test_issue.py  test_search.py
